# LinearAlgebra

./: CMakeLists.txt  README  main.cpp
benchmarks/: CMakeLists.txt  bench_basic.cpp
cmake/: MyLinAlgConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  basic.cpp
include/MyLinAlg/: Assertions.hpp  Config.hpp  Decompositions.hpp  Expressions.hpp  Matrix.hpp  Solve.hpp  Types.hpp  Vector.hpp
src/: CMakeLists.txt
src/Interfaces/: CMakeLists.txt  IMatrix.hpp  IVector.hpp
src/Matrix/: CMakeLists.txt  Matrix.hpp
src/Utilities/: Assert.hpp  CMakeLists.txt
src/Vector/: CMakeLists.txt  Vector.hpp
tests/: CMakeLists.txt  test_lu.cpp  test_matrix.cpp
